Update header area with font styles.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    
+    <!--Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <title>Colmar Academy</title>
 </head>
 <body>
     
+    <header>
+        <div class="logo">
+              <img src="./resources/images/ic-logo.svg" alt="" role="presentation">
+            <p><span class="bold">Colmar</span><span class="gray">Academy</span></p>
+        </div>
+        <nav>
+            <a href="#">On campus</a>
+            <a href="#">Online</a>
+            <a href="#">For companies</a>
+            <a href="#">Sign in</a>
+        </nav>
+      </header>
+  
   </body>
 </html>
