Start banner section.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
             <a href="#">For companies</a>
             <a href="#">Sign in</a>
         </nav>
-      </header>
+    </header>
+      
+    <div class="banner">
+        <img src="./resources/images/banner.jpg" alt=""><!--TODO add alt text -->
+         <!-- Check to see whether to use <figure> here -->
+        <div class="learn">
+            <h2>Learn something<br> new every day</h2>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <h4 class="button">Start Here</h4>
+        </div>
+    </div>
   
   </body>
 </html>
