--- a/index.html
+++ b/index.html
@@ -27,15 +27,50 @@
         </nav>
     </header>
       
-    <div class="banner">
+    <section class="banner">
         <img src="./resources/images/banner.jpg" alt=""><!--TODO add alt text -->
          <!-- Check to see whether to use <figure> here -->
-        <div class="learn">
-            <h2>Learn something<br> new every day</h2>
+        <hgroup class="learn">
+            <h2>Learn something<br>new every day</h2>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
             <h4 class="button">Start Here</h4>
+        </hgroup>
+    </section>
+    
+    <section class="information">
+        <div class="information-main">
+            <img src="./resources/images/information-main.jpg" alt="">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <p>Emanuel, Sr Strategist at Hiring.com</p>
         </div>
-    </div>
+        <div class="grid">
+            <div class="info-container">
+                <img src="./resources/images/information-orientation.jpg" alt="">
+                <div class="text-container">
+                    <h3>Orientation date</h3>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p><!-- TODO find alternative for & -->
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div class="info-container">
+                <img src="./resources/images/information-campus.jpg" alt="">
+                <div class="text-container">
+                    <h3>Our campus</h3>
+                    <p>Find which campus is close by you</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div class="info-container">
+                <img src="./resources/images/information-guest-lecture.jpg" alt="">
+                <div class="text-container">
+                    <h3>Our guest lecture</h3>
+                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
   
   </body>
 </html>
