Added and formatted courses section.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,65 @@
             </div>
         </div>
     </section>
+    
+    <section class="courses">
+            <h2>Start Learning</h2>
+            <div class="courses-container flex">
+                    <div class="course-container">
+                        <img src="./resources/images/course-software.jpg" alt="">
+                        <div class="txt-container">
+                            <h3>Software engineering</h3>
+                            <h4>COURSES</h4>
+                            <p>Web Development, Mobile Development, iOT, APIs</p>
+                        </div>
+                    </div>
+                    <div class="course-container middle">
+                        <img src="./resources/images/course-computer-art.jpg" alt="">
+                        <div class="txt-container">
+                            <h3>Computer art</h3>
+                            <h4>COURSES</h4>
+                            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                        </div>
+                    </div>
+                    <div class="course-container">
+                        <img src="./resources/images/course-design.jpg" alt="">
+                        <div class="txt-container">
+                            <h3>Design</h3>
+                            <h4>COURSES</h4>
+                            <p>User Experience Design, User Research, Visual Design</p>
+                        </div>
+                    </div>
+            </div>
+            <div class="courses-container flex">
+                    <div class="course-container">
+                        <img src="./resources/images/course-data.jpg" alt="">
+                        <div class="txt-container">
+                            <h3>Data</h3>
+                            <h4>COURSES</h4>
+                            <p>Data Science, Big Data, SQL, Data Visualization</p>
+                        </div>
+                    </div>
+                    <div class="course-container middle">
+                        <img src="./resources/images/course-business.jpg" alt="">
+                        <div class="txt-container">
+                            <h3>Business</h3>
+                            <h4>COURSES</h4>
+                            <p>Product Development, Business Development, Startup</p>
+                        </div>
+                    </div>
+                    <div class="course-container">
+                        <img src="./resources/images/course-marketing.jpg" alt="">
+                        <div class="txt-container">
+                            <h3>Marketing</h3>
+                            <h4>COURSES</h4>
+                            <p>Analytics, Content Marketing, Mobile Marketing</p>
+                        </div>
+                    </div>
+            </div>
+    </section>
   
   </body>
 </html>
+
+
+<!-- TODO add ARIA attributes -->
